two more todos